--- a/tasks/pre_requisite.yml
+++ b/tasks/pre_requisite.yml
@@ -1,4 +1,42 @@
 ---
-- name: sssd | Add the OS specific varibles
+- name: sssd | Add the OS specific variables
   include_vars: "{{ hostvars[inventory_hostname]['ansible_os_family'] +
                     '.yml' }}"
+- name: sssd | Set facts about sssd role
+  set_fact:
+    sssd_settings: "{{ hostvars[inventory_hostname]['sssd'] |
+      json_query('[].settings[]') }}"
+    sssd_domains: "{{ hostvars[inventory_hostname]['sssd'] |
+      json_query('[].settings[].sssd[].domains[]') }}"
+    sssd_logger: "{{ hostvars[inventory_hostname]['sssd'] |
+      json_query('[].logger | [0]') }}"
+- name: sssd | Create sssd catalog
+  file:
+    path: "{{ hostvars[inventory_hostname]['sssd_conf_dest'] }}"
+    state: "directory"
+    owner: "root"
+    group: "root"
+    mode: "0711"
+- name: sssd | Create sysconfig catalog
+  file:
+    path: "/etc/sysconfig"
+    state: "directory"
+    owner: "root"
+    group: "root"
+    mode: "0755"
+  when:
+  - "vars['sssd_logger'] is defined"
+  - "vars['sssd_logger'] != ''"
+- name: sssd | Deploy sysconfig env logger settings
+  template:
+    src: "sssd_sysconfig.j2"
+    dest: "/etc/sysconfig/sssd"
+    group: "root"
+    owner: "root"
+    mode: "0644"
+    force: "yes"
+  when:
+  - "vars['sssd_logger'] is defined"
+  - "vars['sssd_logger'] != ''"
+  notify:
+  - "Restart sssd"
