--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,19 +1,19 @@
 ---
 galaxy_info:
   author: "Konstantin Shalygin <k0ste@k0ste.ru>"
-  issue_tracker_url: "http://jira.opentech.local/secure/Dashboard.jspa"
+  issue_tracker_url: "https://jira.e2e4.ru/"
   description: "sssd - System Security Services Daemon"
   company: "LLC Open Technologies"
   license: "GPL"
-  min_ansible_version: "2.8"
+  min_ansible_version: "3.0.0"
   platforms:
-  - name: Archlinux
-    versions:
-    - any
-  - name: EL
-    versions:
-    - 7
-    - 8
+    - name: Archlinux
+      versions:
+        - any
+    - name: EL
+      versions:
+        - 7
+        - 8
   categories:
-  - system
+    - system
 dependencies: []
