--- a/tasks/deploy_sssd.yml
+++ b/tasks/deploy_sssd.yml
@@ -1,23 +1,25 @@
 ---
 - name: sssd | Deploy sssd.conf
-  template:
+  ansible.builtin.template:
     src: "sssd.j2"
-    dest: "{{ hostvars[inventory_hostname]['sssd_conf_dest'] + '/' +
-              'sssd.conf' }}"
+    dest: "{{ hostvars[inventory_hostname]['sssd_conf_dest'] +
+      '/sssd.conf' }}"
     group: "root"
     owner: "root"
     mode: "0600"
     force: "yes"
   notify:
-  - "Restart sssd"
+    - "Restart sssd"
 - name: sssd | Enable sssd service
-  systemd:
+  ansible.builtin.systemd:
     name: "{{ hostvars[inventory_hostname]['sssd_service'] }}"
     enabled: "yes"
   when:
-  - "hostvars[inventory_hostname]['sssd'] |
-     json_query(vars['sssd_enable']) is defined"
-  - "hostvars[inventory_hostname]['sssd'] |
-     json_query(vars['sssd_enable']) == 'true'"
+    - "hostvars[inventory_hostname]['sssd'] is defined"
+    - "hostvars[inventory_hostname]['sssd'] != ''"
+    - "hostvars[inventory_hostname]['sssd'] |
+       community.general.json_query(vars['sssd_enable']) is defined"
+    - "hostvars[inventory_hostname]['sssd'] |
+       community.general.json_query(vars['sssd_enable']) == 'true'"
   vars:
     sssd_enable: "[] | map(&enable || 'false', @) | [0]"
