--- a/tasks/packages.yml
+++ b/tasks/packages.yml
@@ -2,32 +2,32 @@
 - name: sssd | Install the required packages in Redhat derivatives
   block:
   - name: sssd | Install the required packages for RedHat via yum
-    yum:
+    ansible.builtin.yum:
       name: "{{ hostvars[inventory_hostname]['sssd_package'] }}"
-      state: "present"
+      state: "{{ vars['sssd_package_state'] | default(omit) }}"
       update_cache: "yes"
     when:
-    - "hostvars[inventory_hostname]['ansible_pkg_mgr'] == 'yum'"
+      - "hostvars[inventory_hostname]['ansible_pkg_mgr'] == 'yum'"
   - name: sssd | Install the required packages for RedHat via dnf
-    dnf:
+    ansible.builtin.dnf:
       name: "{{ hostvars[inventory_hostname]['sssd_package'] }}"
-      state: "present"
+      state: "{{ vars['sssd_package_state'] | default(omit) }}"
       update_cache: "yes"
     when:
-    - "hostvars[inventory_hostname]['ansible_pkg_mgr'] == 'dnf'"
+      - "hostvars[inventory_hostname]['ansible_pkg_mgr'] == 'dnf'"
   when:
-  - "hostvars[inventory_hostname]['ansible_os_family'] == 'RedHat'"
+    - "hostvars[inventory_hostname]['ansible_os_family'] == 'RedHat'"
 - name: sssd | Install the required packages in Debian derivatives
-  apt:
+  ansible.builtin.apt:
     name: "{{ hostvars[inventory_hostname]['sssd_package'] }}"
-    state: "present"
+    state: "{{ vars['sssd_package_state'] | default(omit) }}"
     update_cache: "yes"
   when:
-  - "hostvars[inventory_hostname]['ansible_os_family'] == 'Debian'"
+    - "hostvars[inventory_hostname]['ansible_os_family'] == 'Debian'"
 - name: sssd | Install the required packages in ArchLinux derivatives
-  pacman:
+  community.general.pacman:
     name: "{{ hostvars[inventory_hostname]['sssd_package'] }}"
-    state: "present"
+    state: "{{ vars['sssd_package_state'] | default(omit) }}"
     update_cache: "yes"
   when:
-  - "hostvars[inventory_hostname]['ansible_os_family'] == 'Archlinux'"
+    - "hostvars[inventory_hostname]['ansible_os_family'] == 'Archlinux'"
