--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,9 +1,9 @@
 ---
 galaxy_info:
   author: "Konstantin Shalygin <k0ste@k0ste.ru>"
-  issue_tracker_url: "https://jira.e2e4.ru/"
+  issue_tracker_url: "https://github.com/k0ste/ansible-role-sssd"
   description: "sssd - System Security Services Daemon"
-  company: "LLC Open Technologies"
+  company: "YASB"
   license: "GPL"
   min_ansible_version: "3.0.0"
   platforms:
@@ -14,6 +14,7 @@ galaxy_info:
       versions:
         - 7
         - 8
+        - 9
   categories:
     - system
 dependencies: []
