--- a/tasks/packages.yml
+++ b/tasks/packages.yml
@@ -1,22 +1,34 @@
 ---
 - name: "sssd | Install the required packages in Redhat derivatives"
-  ansible.builtin.dnf:
-    name: "{{ hostvars[inventory_hostname]['sssd_package'] }}"
-    state: "{{ vars['sssd_package_state'] | default(omit) }}"
-    update_cache: "yes"
   when:
     - "hostvars[inventory_hostname]['ansible_os_family'] == 'RedHat'"
+  block:
+    - name: "sssd | Update dnf cache"
+      ansible.builtin.dnf:
+        update_cache: "yes"
+    - name: "sssd | Install package with dnf"
+      ansible.builtin.dnf:
+        name: "{{ hostvars[inventory_hostname]['sssd_package'] }}"
+        state: "{{ vars['sssd_package_state'] | default(omit) }}"
 - name: "sssd | Install the required packages in Debian derivatives"
-  ansible.builtin.apt:
-    name: "{{ hostvars[inventory_hostname]['sssd_package'] }}"
-    state: "{{ vars['sssd_package_state'] | default(omit) }}"
-    update_cache: "yes"
   when:
     - "hostvars[inventory_hostname]['ansible_os_family'] == 'Debian'"
+  block:
+    - name: "sssd | Update apt cache"
+      ansible.builtin.apt:
+        update_cache: "yes"
+    - name: "sssd | Install package with apt"
+      ansible.builtin.apt:
+        name: "{{ hostvars[inventory_hostname]['sssd_package'] }}"
+        state: "{{ vars['sssd_package_state'] | default(omit) }}"
 - name: "sssd | Install the required packages in ArchLinux derivatives"
-  community.general.pacman:
-    name: "{{ hostvars[inventory_hostname]['sssd_package'] }}"
-    state: "{{ vars['sssd_package_state'] | default(omit) }}"
-    update_cache: "yes"
   when:
     - "hostvars[inventory_hostname]['ansible_os_family'] == 'Archlinux'"
+  block:
+    - name: "sssd | Update pacman cache"
+      community.general.pacman:
+        update_cache: "yes"
+    - name: "sssd | Install package with pacman"
+      community.general.pacman:
+        name: "{{ hostvars[inventory_hostname]['sssd_package'] }}"
+        state: "{{ vars['sssd_package_state'] | default(omit) }}"
