--- a/tasks/pre_requisite.yml
+++ b/tasks/pre_requisite.yml
@@ -12,22 +12,23 @@
       community.general.json_query('[].settings[].sssd[].domains[]') }}"
     sssd_logger: "{{ hostvars[inventory_hostname]['sssd'] |
       community.general.json_query('[].logger | [0]') }}"
-- name: "sssd | Assert that sssd package state in valid value"
+- name: "sssd | Assert that package state in valid value"
   ansible.builtin.assert:
     that:
       - "vars['sssd_package_state'] in ['present', 'latest']"
-    fail_msg: "{{ 'package_state must be in `present` or `latest`, current is: ' +
-      vars['sssd_package_state'] }}"
+    fail_msg: "'package_state' must be in 'present' or 'latest'"
     quiet: "true"
   when:
     - "vars['sssd_package_state'] is defined"
+    - "vars['sssd_package_state'] != []"
     - "vars['sssd_package_state'] != ''"
+    - "vars['sssd_package_state'] != None"
 - name: "sssd | Set package state to 'present' cause value is not defined"
   ansible.builtin.set_fact:
     sssd_package_state: "present"
   when:
     - "vars['sssd_package_state'] is defined"
-    - "vars['sssd_package_state'] == ''"
+    - "(vars['sssd_package_state'] == '' or vars['sssd_package_state'] == None)"
 - name: "sssd | Create sssd catalog"
   ansible.builtin.file:
     path: "{{ hostvars[inventory_hostname]['sssd_conf_dest'] }}"
