--- a/tasks/pre_requisite.yml
+++ b/tasks/pre_requisite.yml
@@ -1,7 +1,22 @@
 ---
-- name: "sssd | Add the OS specific varibles"
+- name: "sssd | Assert that ansible facts gathered successfully"
+  ansible.builtin.assert:
+    that:
+      - "hostvars[inventory_hostname]['ansible_facts']['service_mgr'] is
+        defined"
+    fail_msg: "'ansible_facts' not found. Please enable facts gathering"
+    quiet: "true"
+- name: "sssd | Assert that system manager is systemd"
+  ansible.builtin.assert:
+    that:
+      - "hostvars[inventory_hostname]['ansible_facts']['service_mgr'] ==
+        'systemd'"
+    fail_msg: "System manager is not systemd"
+    quiet: "true"
+- name: "sssd | Add the OS specific variables"
   ansible.builtin.include_vars:
-    file: "{{ hostvars[inventory_hostname]['ansible_os_family'] + '.yml' }}"
+    file: "{{ hostvars[inventory_hostname]['ansible_facts']['os_family'] +
+      '.yml' }}"
 - name: "sssd | Set facts about sssd role"
   ansible.builtin.set_fact:
     sssd_package_state: "{{ hostvars[inventory_hostname]['sssd'] |
@@ -12,23 +27,27 @@
       community.general.json_query('[].settings[].sssd[].domains[]') }}"
     sssd_logger: "{{ hostvars[inventory_hostname]['sssd'] |
       community.general.json_query('[].logger | [0]') }}"
-- name: "sssd | Assert that package state in valid value"
+  when:
+    - "hostvars[inventory_hostname]['sssd'] is defined"
+    - "hostvars[inventory_hostname]['sssd'] not in ['', [], '[]', None]"
+- name: "sssd | Assert that sssd package state in valid value"
   ansible.builtin.assert:
     that:
-      - "vars['sssd_package_state'] in ['present', 'latest']"
-    fail_msg: "'package_state' must be in 'present' or 'latest'"
+      - "lookup('ansible.builtin.vars', 'sssd_package_state') in
+        ['present', 'latest']"
+    fail_msg: "{{ 'package_state must be in `present` or `latest`,
+      current is: ' + lookup('ansible.builtin.vars',
+      'sssd_package_state') }}"
     quiet: "true"
   when:
-    - "vars['sssd_package_state'] is defined"
-    - "vars['sssd_package_state'] != []"
-    - "vars['sssd_package_state'] != ''"
-    - "vars['sssd_package_state'] != None"
+    - "lookup('ansible.builtin.vars', 'sssd_package_state',
+      default='') not in ['', [], '[]', None, 'present', 'latest']"
 - name: "sssd | Set package state to 'present' cause value is not defined"
   ansible.builtin.set_fact:
     sssd_package_state: "present"
   when:
-    - "vars['sssd_package_state'] is defined"
-    - "(vars['sssd_package_state'] == '' or vars['sssd_package_state'] == None)"
+    - "lookup('ansible.builtin.vars', 'sssd_package_state',
+      default='') in ['', [], '[]', None]"
 - name: "sssd | Create sssd catalog"
   ansible.builtin.file:
     path: "{{ hostvars[inventory_hostname]['sssd_conf_dest'] }}"
@@ -36,6 +55,9 @@
     owner: "root"
     group: "root"
     mode: "0711"
+  when:
+    - "lookup('ansible.builtin.vars', 'sssd_settings',
+      default='') not in ['', [], '[]', None]"
 - name: "sssd | Create sysconfig catalog"
   ansible.builtin.file:
     path: "/etc/sysconfig"
@@ -44,18 +66,5 @@
     group: "root"
     mode: "0755"
   when:
-    - "vars['sssd_logger'] is defined"
-    - "vars['sssd_logger'] != ''"
-- name: "sssd | Deploy sysconfig env logger settings"
-  ansible.builtin.template:
-    src: "sssd_sysconfig.j2"
-    dest: "/etc/sysconfig/sssd"
-    group: "root"
-    owner: "root"
-    mode: "0644"
-    force: "yes"
-  when:
-    - "vars['sssd_logger'] is defined"
-    - "vars['sssd_logger'] != ''"
-  notify:
-    - "Restart sssd"
+    - "lookup('ansible.builtin.vars', 'sssd_logger',
+      default='') not in ['', [], '[]', None]"
